@@ -33,10 +33,10 @@ public class StructureElementVisitorTest {
 
     @Test
     public void shouldParseVertex() {
-        assertEquals(g.addE("knows").from(new ReferenceVertex(2, "person")), eval("g.addE('knows').from(new Vertex(2, 'person'))"));
-        assertEquals(g.addE("knows").to(new ReferenceVertex("1", "person")), eval("g.addE('knows').to(new Vertex('1', 'person'))"));
-        assertEquals(g.addE("knows").from(new ReferenceVertex(2, "person")), eval("g.addE('knows').from(new ReferenceVertex(2, 'person'))"));
-        assertEquals(g.addE("knows").to(new ReferenceVertex("1", "person")), eval("g.addE('knows').to(new ReferenceVertex('1', 'person'))"));
+        assertEquals(g.addE("knows").from(new ReferenceVertex(2, "person")), eval("g.addE('knows').from(Vertex(2, 'person'))"));
+        assertEquals(g.addE("knows").to(new ReferenceVertex("1", "person")), eval("g.addE('knows').to(Vertex('1', 'person'))"));
+        assertEquals(g.addE("knows").from(new ReferenceVertex(2, "person")), eval("g.addE('knows').from(Vertex(2))"));
+        assertEquals(g.addE("knows").to(new ReferenceVertex("1", "person")), eval("g.addE('knows').to(Vertex('1'))"));
     }
 
     private static Object eval(final String query) {
