@@ -929,15 +929,24 @@ public class GremlinTranslatorTest {
                             "g.V().has(\"name\", \"foo\").property(new LinkedHashMap<Object, Object>() {{ put(\"name\", Cardinality.set(\"bar\")); put(\"age\", 43); }})",
                             "g.V().has(\"name\", \"foo\").property(new Map([[\"name\", CardinalityValue.set(\"bar\")], [\"age\", 43]]))",
                             "g.V().has('name', 'foo').property({ 'name': CardinalityValue.set_('bar'), 'age': 43 })"},
-                    {"g.V(new Vertex(1, \"person\")).limit(1)",
+                    {"g.V(Vertex(1, \"person\")).limit(1)",
                             null,
-                            "g.V(new Vertex(number0, string0)).limit(number0)",
+                            "g.V(Vertex(number0, string0)).limit(number0)",
                             "g.V(new Vertex(1, \"person\")).Limit<object>(1)",
                             "g.V(gremlingo.Vertex{Element{1, \"person\"}}).Limit(1)",
                             "g.V(new ReferenceVertex(1, \"person\")).limit(1)",
                             "g.V(new ReferenceVertex(1, \"person\")).limit(1)",
                             "g.V(new Vertex(1, \"person\")).limit(1)",
                             "g.V(Vertex(1, 'person')).limit(1)",},
+                    {"g.V(Vertex(1)).limit(1)",
+                            null,
+                            "g.V(Vertex(number0)).limit(number0)",
+                            "g.V(new Vertex(1)).Limit<object>(1)",
+                            "g.V(gremlingo.Vertex{Element{1}}).Limit(1)",
+                            "g.V(new ReferenceVertex(1)).limit(1)",
+                            "g.V(new ReferenceVertex(1)).limit(1)",
+                            "g.V(new Vertex(1)).limit(1)",
+                            "g.V(Vertex(1)).limit(1)",},
                     {"g.V().both().properties().dedup().hasKey(\"age\").value()",
                             null,
                             "g.V().both().properties().dedup().hasKey(string0).value()",
